--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>frontend-test</title>
   </head>
   <body>
-
     <div class="content">
       <div class="profile">
         <div class="profile__photo">
@@ -75,10 +74,10 @@
         </div>
       </div>
       <div class="comments">
-        <div class="comments__header">
+        <div class="comments__header-com">
           <div>
-            <div class="last-comments">Последние отзывы</div>
-            <a href="#" class="all-comments">Все отзывы</a>
+            <a href="#" class="header-com_active">Последние отзывы</a>
+            <a href="#" class="header-com">Все отзывы</a>
           </div>
           <div class="statistic">
             <div class="statistic__likes">
