--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="services-table__body">
               <div class="services-table__raw">
-                <div class="progress-bar progress-bar_green" >
+                <div class="progress-bar progress-bar_green">
                   Ручное бронирование
                 </div>
                 <div>
@@ -128,6 +128,6 @@
         </div>
       </div>
     </div>
-    <script src="./scripts.js"/>
+    <script src="./scripts.js" type="text/javascript"></script>
   </body>
 </html>
